# coffee

./: Cargo.toml  Makefile  README.md  docs.json  git-bugreport-2024-02-07-1353.txt  reckless.yml
.githooks/: pre-commit
.github/workflows/: audit.yml  build.yml  integration_testing.yml
coffee_cmd/: Cargo.toml
coffee_cmd/src/: cmd.rs  coffee_term.rs  main.rs  term.rs
coffee_cmd/src/coffee/: cmd.rs  config.rs  mod.rs
coffee_cmd/src/coffee_term/: command_show.rs
coffee_cmd/src/term/: command_show.rs
coffee_core/: Cargo.toml
coffee_core/src/: coffee.rs  config.rs  lib.rs  nurse.rs
coffee_core/src/nurse/: chain.rs  strategy.rs
coffee_github/: Cargo.toml
coffee_github/src/: lib.rs  repository.rs  utils.rs
coffee_httpd/: Cargo.toml
coffee_httpd/src/: cmd.rs  httpd.rs  lib.rs  main.rs
coffee_httpd/src/httpd/: macros.rs  server.rs
coffee_lib/: Cargo.toml
coffee_lib/docker/: pip.Dockerfile  poetry.Dockerfile
coffee_lib/src/: cln_conf.rs  errors.rs  lib.rs  macros.rs  plugin.rs  plugin_conf.rs  plugin_manager.rs  repository.rs  url.rs  utils.rs
coffee_lib/src/types/: mod.rs
coffee_plugin/: Cargo.toml
coffee_plugin/src/: main.rs  plugin.rs
coffee_plugin/src/plugin/: model.rs  plugin.rs  plugin_mod.rs  state.rs
coffee_storage/: Cargo.toml
coffee_storage/src/: file.rs  lib.rs  nosql_db.rs  storage.rs
coffee_storage/src/model/: repository.rs
coffee_testing/: Cargo.toml
coffee_testing/src/: btc.rs  cln.rs  lib.rs
contrib/: pre-commit
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
docs/: index.mdx
docs/docs-book/: .gitignore  book.toml
docs/docs-book/src/: SUMMARY.md  chapter_1.md  contributing-to-coffee.md  how-to-contribute.md  how-to-install.md  how-to-support.md  how-to-use.md  install-coffee.md  intro.md  introduction.md  support-coffee.md  using-coffee.md
reckless_cmd/: Cargo.toml
reckless_cmd/src/: main.rs
reckless_cmd/src/reckless/: cmd.rs  config.rs  mod.rs
reckless_github/: Cargo.toml
reckless_github/src/: lib.rs  repository.rs
reckless_lib/: Cargo.toml
reckless_lib/src/: data.rs  errors.rs  lib.rs  plugin.rs  plugin_conf.rs  plugin_manager.rs  repository.rs  url.rs  utils.rs
storage/: Cargo.toml
storage/src/: file.rs  lib.rs  model.rs  storage.rs
storage/src/model/: repository.rs
tests/: Cargo.toml
tests/src/: coffee_httpd_integration_tests.rs  coffee_integration_tests.rs  coffee_plugin_integration_tests.rs  lib.rs
