[package]
name = "coffee"
version = "0.0.1-alpha.1"
edition = "2021"


[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
clap = { version = "4.0.26", features = ["derive"] }
async-trait = "0.1.57"
coffee_core = { path = "../coffee_core" }
coffee_lib = { path = "../coffee_lib" }
log = "0.4.17"
env_logger = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
clightningrpc-conf = "0.0.1"
clightningrpc-common = "0.3.0-beta.3"
termimad = "0.23"
