[package]
name = "coffee_core"
version = "0.0.1-alpha.1"
edition = "2021"


[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
async-trait = "0.1.57"
coffee_lib = { path = "../coffee_lib" }
coffee_github = { path = "../coffee_github"  }
log = "0.4.17"
env_logger = "0.9.3"
coffee_storage = { path = "../coffee_storage"  }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
clightningrpc-conf = "0.0.3"
clightningrpc-common = "0.3.0-beta.4"
git2 = "^0.18.1"
chrono = { version = "0.4", features = ["std"], default-features = false }
