[package]
name = "coffee_httpd"
version = "0.1.0"
edition = "2021"

[lib]
name = "coffee_httpd"
path = "src/lib.rs"

[[bin]]
name = "coffee_httpd"
path = "src/main.rs"

[dependencies]
actix-web = "4"
clap = { version = "4.1.11", features = ["derive"] }
tokio = { version = "1.22.0", features = ["sync"] }
coffee_core = { path = "../coffee_core" }
coffee_lib = { path = "../coffee_lib", features = ["open-api"] }
paperclip = { version = "0.8.0", features = ["actix4"] }
log = "0.4.17"
env_logger = "0.9.3"
serde = "1"
serde_json = "1"
