[package]
name = "coffee_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "^0.1.57"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "^0.18.1"
log = "0.4.17"
env_logger = "0.11"
tokio = { version = "1.22.0", features = ["process", "fs"] }
paperclip = { version = "0.8.0", features = ["actix4"], optional = true }

[features]
open-api = ["dep:paperclip"]
