[package]
name = "coffee_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.22.0", features = ["rt"] }
clightningrpc-common = { git = "https://github.com/laanwj/cln4rust.git", branch = "macros/api" }
clightningrpc-plugin = { git = "https://github.com/laanwj/cln4rust.git", branch = "macros/api" }
coffee_core = { path = "../coffee_core" }
serde_json = "1"
