[package]
name = "coffee_testing"
version = "0.1.0"
edition = "2021"

[dependencies]
clightningrpc = "0.3.0-beta.6"
bitcoincore-rpc = "0.17.0"
log = "0.4.19"
coffee_core = { path = "../coffee_core" }
tempfile = { git = "https://github.com/vincenzopalazzo/tempfile.git", branch = "macros/clone-tmpdir" }
port-selector = "0.1.6"
anyhow = "1.0.71"
tokio = { version = "1.22.0", features = ["process", "time"] }
