[package]
name = "reckless_cmd"
version = "0.0.1-alpha.1"
edition = "2021"


[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
clap = { version = "4.0.26", features = ["derive"] }
async-trait = "0.1.57"
reckless_lib = { path = "../reckless_lib" }
reckless_github = { path = "../reckless_github"  }
log = "0.4.17"
env_logger = "0.9.3"
coffe_storage = { path = "../storage"  }
serde = { version = "1.0", features = ["derive"] }
