[package]
name = "reckless_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
reqwest = { version = "0.11.12", features = ["stream", "json"] }
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
error-chain = "0.12.4"
