[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
coffee_lib = { path = "../coffee_lib" }
coffee_testing = { path = "../coffee_testing" }
anyhow = "1.0.71"
tempfile = "3.6.0"
log = { version = "0.4", features = ["std"] }
colored = "1.9"
chrono = { version = "0.4", features = ["std"], default-features = false }
tokio = { version = "1.22.0", features = ["rt"] }
ntest = "0.9.0"
serde_json = "1"
